--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="A4TkZOO6EoypWNEhTqeQsGPBuFCoqg07z-UiYmD8wdc" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to Calcular Horas de Trabalho and Breaks with Precision Using a Calculadora de Horas y Minutos</title>
@@ -59,7 +60,7 @@
         }
 
         strong {
-            color: #0066cc;
+            
         }
 
         /* Buttons and Links */
